Edit #1 images not shown

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
   font-family: Courier, sans-serif;
   font-style: normal;
   color: brown;
-  background-image: url("/images/carrot.jpg");
+  background-image: url("images/carrot.jpg");
   background-color: #b39283;
   background-repeat: repeat;
   height: 300px; }
