Edit #2 background not shown

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -3,7 +3,7 @@ body {
 	font-style: normal;
 	color: brown;
 
-	 background-image: url('images/carrot.jpg');
+	 background-image: url("/images/carrot.jpg");
 	 background-color: #b39283;
 	 background-repeat: repeat;
 	 height: 300px;
