--- a/css/styles.scss
+++ b/css/styles.scss
@@ -3,7 +3,7 @@ body {
 	font-style: normal;
 	color: brown;
 
-	 background-image: url("https://image.freepik.com/free-vector/carrot-pattern-background_1374-14.jpg");
+	 background-image: url('https://image.freepik.com/free-vector/carrot-pattern-background_1374-14.jpg');
 	 background-color: #b39283;
 	 background-repeat: repeat;
 	 height: 300px;
