--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
   font-family: Courier, sans-serif;
   font-style: normal;
   color: brown;
-  background-image: url("https://image.freepik.com/free-vector/carrot-pattern-background_1374-14.jpg");
+  background-image: url("/images/carrot.jpg");
   background-color: #b39283;
   background-repeat: repeat;
   height: 300px; }
